# iptcdata

./: .gitignore  CMakeLists.txt  config.h  config.h.in
libiptcdata/: .gitignore  _stdint.h
